Updated swagger file, added getReference sendCorrespondence and sendReminder request
